--- a/codemods/v4/await-register-calls/package.json
+++ b/codemods/v4/await-register-calls/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@codemod/fastify-4-await-register-calls",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v4/await-register-calls"
+  },
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.2.2",
