--- a/codemods/v4/migration-recipe/package.json
+++ b/codemods/v4/migration-recipe/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@codemod/fastify-4-migration-recipe",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v4/migration-recipe"
+  },
   "files": ["./README.md", "./.codemodrc.json"],
   "type": "module"
 }
