--- a/codemods/v4/remove-app-use/package.json
+++ b/codemods/v4/remove-app-use/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@codemod/fastify-4-remove-app-use",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v4/remove-app-use"
+  },
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.2.2",
