--- a/codemods/v4/wrap-routes-plugin/package.json
+++ b/codemods/v4/wrap-routes-plugin/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@codemod/fastify-4-wrap-routes-plugin",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v4/wrap-routes-plugin"
+  },
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.2.2",
