--- a/codemods/v5/make-reply-trailer-calls-async/package.json
+++ b/codemods/v5/make-reply-trailer-calls-async/package.json
@@ -1,5 +1,11 @@
 {
   "name": "make-reply-trailer-calls-async",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v5/make-reply-trailer-calls-async"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "20.9.0",
