--- a/codemods/v5/redirect-argument-swap/package.json
+++ b/codemods/v5/redirect-argument-swap/package.json
@@ -1,5 +1,11 @@
 {
   "name": "hapi-redirect-argument-swap",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v5/redirect-argument-swap"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "20.9.0",
