--- a/codemods/v5/replace-get-response-time-with-elapsed-time/package.json
+++ b/codemods/v5/replace-get-response-time-with-elapsed-time/package.json
@@ -1,5 +1,11 @@
 {
   "name": "hapi-1-replace-get-response-time-with-elapsed-time",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v5/replace-get-response-time-with-elapsed-time"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "20.9.0",
