--- a/codemods/v5/replace-hardcoded-url-in-hasroute/package.json
+++ b/codemods/v5/replace-hardcoded-url-in-hasroute/package.json
@@ -1,5 +1,11 @@
 {
   "name": "fastify-1-replace-hardcoded-url-in-hasroute",
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemod/fastify-codemods.git",
+    "directory": "codemods/v5/replace-hardcoded-url-in-hasroute"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "20.9.0",
